[gd_scene load_steps=10 format=3 uid="uid://v82dvmpdw1fp"]

[ext_resource type="Script" uid="uid://cyw8qa6v1fdtj" path="res://scenes/UI/option_menu_ingme.gd" id="1_akn35"]
[ext_resource type="FontFile" uid="uid://bnutn7cc24q22" path="res://assets/Fonts/Jersey25-Regular.ttf" id="2_rf6mt"]
[ext_resource type="PackedScene" uid="uid://ca2m5l52di757" path="res://scenes/Controllers/volume_slider.tscn" id="3_1sfhd"]
[ext_resource type="Texture2D" uid="uid://bx0go5bvqesey" path="res://assets/sprites/GUI/BackButton2.png" id="4_4aqhj"]
[ext_resource type="Texture2D" uid="uid://deoo2bu6mbic4" path="res://assets/sprites/GUI/Hover_BackButton2.png" id="5_cmmff"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0j3k"]
bg_color = Color(0.2, 0.101961, 0.239216, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.952941, 0.901961, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vu1q3"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.952941, 0.901961, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r16an"]
bg_color = Color(0.0138674, 0, 0.493541, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqxi1"]
bg_color = Color(0.952941, 0.901961, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.952941, 0.901961, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[node name="OptionMenuInGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akn35")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.10352e-05
offset_top = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e0j3k")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Option" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("2_rf6mt")
theme_override_font_sizes/font_size = 75
text = "Option"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_vu1q3")

[node name="Audio" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("2_rf6mt")
theme_override_font_sizes/font_size = 50
text = "Audio"
horizontal_alignment = 1

[node name="AudioSlider" parent="CenterContainer/Panel/VBoxContainer" instance=ExtResource("3_1sfhd")]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_r16an")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_vqxi1")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_vqxi1")
bus_name = "SFX"

[node name="Music" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("2_rf6mt")
theme_override_font_sizes/font_size = 50
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" parent="CenterContainer/Panel/VBoxContainer" instance=ExtResource("3_1sfhd")]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_r16an")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_vqxi1")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_vqxi1")
bus_name = "BGM"

[node name="TextureButton" type="TextureButton" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = 54.0
offset_top = 8.0
offset_right = 129.0
offset_bottom = 83.0
texture_normal = ExtResource("4_4aqhj")
texture_pressed = ExtResource("5_cmmff")
texture_hover = ExtResource("5_cmmff")
ignore_texture_size = true
stretch_mode = 5

[connection signal="value_changed" from="CenterContainer/Panel/VBoxContainer/AudioSlider" to="." method="_on_audio_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Panel/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/Panel/TextureButton" to="." method="_on_texture_button_pressed"]
